<resources>
    <string name="app_name">FemSanté</string>
    <string name="connect">Connexion</string>
    <string name="e_mail_demand">Saisissez votre e-mail</string>
    <string name="password_demand">Saissisez votre mot de passe</string>
    <string name="bonjour">Menu principal</string>
    <string name="secret_answer">Réponse à la question secrète</string>
    <string name="register_price">Cliquez pour choisir un abonnement</string>
    <string name="register_question">Cliquez pour choisir une question</string>
    <string name="neme_demand">Saisissez votre prénom</string>
    <string name="reduction_code">Code de réduction</string>
    <string name="reduction_code_to_valid">Validez le code de réduction</string>
    <string name="option_calendar">Calendrier des symptômes</string>
    <string name="option_alim">Nutrition</string>
    <string name="option_tete">Bien dans ta tête</string>
    <string name="option_corps">Bien dans ton corps</string>
    <string name="option_outils">Boîte à outils</string>
    <string name="option_meditaion">Méditations</string>
    <string name="option_sophrologie">Sophrologie</string>
    <string name="option_therapieart">Art-thérapie</string>
    <string name="option_yoga">Yoga</string>
    <string name="option_fitness">Fitness</string>
    <string name="option_pilates">Pilates</string>
    <string name="option_danse">Danse</string>
    <string name="pdf">A explorer</string>
    <string name="joy">Joie</string>
    <string name="anger">Colère</string>
    <string name="fear">Peur</string>
    <string name="sadness">Tristesse</string>
    <string name="fans">Eventails</string>
    <string name="Mirror_exercice">Exercice du miroir</string>
    <string name="shoulder">Pompage des épaules</string>
    <string name="audio_exercise">Sophronisations</string>
    <string name="emotional_intelligence">Intelligence émotionnelle</string>
    <string name="thoracic">Soufflet thoracique</string>
    <string name="hypnosis">Hypnose</string>
    <string name="exo_prev">Précédent</string>
    <string name="exo_rewind">Reculer</string>
    <string name="exo_shuffle">Aléatoire</string>
    <string name="exo_repeat_toggle">Répéter</string>
    <string name="exo_play">Lire</string>
    <string name="exo_pause">Pause</string>
    <string name="exo_fastforward">Avancer</string>
    <string name="exo_next">Suivant</string>
    <string name="exo_vr">VR</string>
    <string name="exo_position">Position</string>
    <string name="exo_duration">Durée</string>
    <string name="exo_fullscreen">Plein écran</string>
    <string name="outils1">Automassage du ventre</string>
    <string name="outils2">Les vertus de la bouillotte</string>
    <string name="outils3">Huiles essentielles pour apaiser les douleurs abdominales</string>
    <string name="outils4">Huiles essentielles pour apaiser les tempêtes émotionelles</string>
    <string name="outils5">Infusions pour apaiser les tempêtes émotionelles</string>
    <string name="outils6">Infusions et digestion</string>
    <string name="outils7">Infusions pour apaiser les menstruations</string>
    <string name="beginner">Débutant en yoga</string>
    <string name="calm">Retrouver son calme intérieur</string>
    <string name="flow">SOS Douleurs</string>
    <string name="icone_description">Icône de l\'application</string>
    <string name="error_recette">Problème d\'affichage</string>
    <string name="help">Cliquez sur l\'image pour afficher la recette</string>
    <string name="ebook">Les secrets des micronutriments</string>
    <string name="ressources">Ressources nutrition</string>
    <string name="intolerence">Intolérance à l\'histamine</string>
    <string name="sensibilit_au_gluten">Sensibilité au gluten</string>
    <string name="password_forgotten">Mot de passe oublié ?</string>
    <string name="change_password">Changer le mot de passe</string>
    <string name="register">Inscription</string>
    <string name="register_pay">Payer l\'inscription</string>
    <string name="password_demand_2">Confirmez le mot de passe</string>
    <string name="paiement">Paiement</string>
    <string name="card_payment">Par carte</string>
    <string name="PayPal_payment">Par Paypal</string>
    <string name="card_expiration_month">Mois</string>
    <string name="card_expiration_year">Année</string>
    <string name="security_code">Code de sécurité</string>
    <string name="card_number">Numero de carte</string>
    <string name="credit_card_pay">Payer</string>
    <string name="CGV_help">Veuillez accepter les conditions générales de vente</string>
    <string name="cgv_button">Conditions générales de vente</string>
    <string name="cgu">Conditions générales d\'utilisation</string>
    <string name="test_period">Essai gratuit de 7 jours</string>
    <string name="recipe">Recettes</string>
    <string name="breakfeast">Petit-déjeuner</string>
    <string name="entry">Entrées</string>
    <string name="plats">Plats</string>
    <string name="dessert">Desserts</string>
    <string name="audio_choice">Cliquez pour choisir un exercice</string>
    <string name="liste_des_recettes">Cliquez pour choisir une recette</string>
    <string name="price">Prix à payer:</string>
    <string name="main_menu">Menu principal</string>
    <string name="account">Mon compte</string>
    <string name="account_preferences">Mes préférences</string>
    <string name="preferences_title">Mes préférences</string>
    <string name="preferences_cycle_section">Mon cycle</string>
    <string name="preferences_save">Enregistrer</string>
    <string name="preferences_saved">Préférences enregistrées</string>
    <string name="legal_mentions">Mentions légales</string>
    <string name="confidentiality">Politiques de confidentialité</string>
    <string name="password_change">Changer de mot de passe</string>
    <string name="login">Login</string>
    <string name="documents">Documents</string>
    <string name="welcome">Bienvenue</string>
    <string name="subscribe_update">Mise à jour de l\'abonnement</string>
    <string name="login_name">Login</string>
    <string name="password_help">Le mot de passe est composé d\'au moins 8 caractères contenant au moins 1 majuscule, 1 caractère spécial et 1 minuscule</string>
    <string name="facebook">Communauté Facebook</string>
    <string name="loading">En attente de la réponse Internet…</string>
    <string name="facebook_app_id">24442016295389259</string>
    <string name="exo_settings">Paramètres exo</string>
    <string name="exo_menuOn">Menu Exo on</string>
    <string name="exo_menuOff">Exo Menu off</string>
    <string name="exo_fullscreen_off">Plein écran arrêt</string>
    <string name="previous_month">Mois précédent</string>
    <string name="next_month">Mois suivant</string>
    <string name="date">13 Janvier 2026</string>
    <string name="sample_empty_daily">Aucune donnée enregistrée pour cette journée.</string>
    <string name="daily_add">Ajouter un suivi</string>
    <string name="quality_day">Qualité de la journée</string>
    <string name="causes_quality_day">Quelles sont les causes ?</string>
    <string name="other_details">Autres précisions…</string>
    <string name="quality_day_causes">Raisons de la mauvaise journée</string>
    <string name="calendar_general">Général</string>
    <string name="calendar_moral">Moral</string>
    <string name="calendar_symptom">Symptômes</string>
    <string name="calendar_context">Contexte</string>
    <string name="dolor_symptom">Zones de douleur</string>
    <string name="zone_pelvis">Bassin</string>
    <string name="zone_back">Lombaires</string>
    <string name="zone_breasts">Seins</string>
    <string name="zone_head">Tête</string>
    <string name="zone_abdomen">Abdomen</string>
    <string name="symptom_nausea">Nausées</string>
    <string name="others_symptoms">Autres observations</string>
    <string name="others_symptom_hint">Décrivez d\'autres symptômes…</string>
    <string name="action_save_entry">Enregistrer les choix</string>
    <string name="msg_save_success">Entrée enregistré avec succés</string>
    <string name="placeholder">Titre Section</string>
    <string name="entry_remove">Supprimer l\'entrée</string>
    <string name="entry_modify">Modifier l\'entrée</string>
    <string name="daily_resume">Résumé du jour</string>
    <string name="general">Général</string>
    <string name="psychological">Psychologique</string>
    <string name="symptom">Symptômes</string>
    <string name="context">Contexte</string>
    <string name="logout">Se déconnecter</string>
    <string name="pour_toi_title">Pour toi aujourd\'hui</string>
    <string name="pour_toi_banner_incitatif">Pour des recommandations plus personnalisées, renseigne ton ressenti du jour dans ton journal.</string>
    <string name="pour_toi_banner_action">Remplir mon journal</string>
    <string name="badge_recommande">Recommandé pour toi</string>
    <string name="nav_pour_toi">Pour toi</string>
    <string name="nav_decouvrir">Découvrir</string>
    <string name="geste_du_jour_label">Ton geste du jour</string>
    <string name="geste_du_jour_prefix">Aujourd\'hui, tu pourrais essayer :</string>
    <string name="geste_du_jour_action">Découvrir</string>
    <string name="pour_toi_more_title">Recommandé pour toi</string>
    <string name="pour_toi_empty">Rien de particulier à te proposer aujourd\'hui.\nPrends soin de toi, à ton rythme 🌿</string>
    <string name="tab_calendar">Calendrier</string>
    <string name="legend_pain_title">Douleur du jour</string>
    <string name="legend_pain_low">Faible</string>
    <string name="legend_pain_mid">Modérée</string>
    <string name="legend_pain_high">Forte</string>
    <string name="legend_cycle_title">Cycle</string>
    <string name="legend_period">Règles</string>
    <string name="legend_predicted">Prévu</string>
    <string name="cycle_section_title">Suivi du cycle</string>
    <string name="cycle_period_today">Règles ce jour</string>
    <string name="cycle_period_predicted_hint">Prévision : décoche si tes règles ne sont pas arrivées.</string>
    <string name="cycle_flow_label">Abondance du flux</string>
    <string name="cycle_flow_light">Léger</string>
    <string name="cycle_flow_medium">Moyen</string>
    <string name="cycle_flow_heavy">Abondant</string>
    <string name="cycle_spotting">Spotting (pertes hors règles)</string>
    <string name="cycle_profile_title">Comment sont tes cycles ?</string>
    <string name="cycle_profile_message">Pour adapter le suivi à ta situation. Tu pourras le modifier plus tard.</string>
    <string name="cycle_profile_regular">Réguliers</string>
    <string name="cycle_profile_irregular">Irréguliers</string>
    <string name="cycle_profile_absent">Absents ou sous pilule</string>
    <string name="cycle_length_label">Durée moyenne du cycle (jours)</string>
    <string name="period_length_label">Durée des règles (jours)</string>
    <string name="cycle_invite_message">Pour un suivi adapté à ta situation, renseigne tes cycles dans tes préférences. Tu pourras les modifier à tout moment.</string>
    <string name="cycle_invite_configure">Configurer</string>
    <string name="cycle_invite_later">Plus tard</string>
    <string name="cycle_phase_label">Phase estimée : %1$s</string>
    <string name="cycle_phase_menstruelle">Menstruelle</string>
    <string name="cycle_phase_folliculaire">Folliculaire</string>
    <string name="cycle_phase_ovulation">Ovulation</string>
    <string name="cycle_phase_luteale">Lutéale</string>
    <string name="cycle_phase_indeterminee">Indéterminée</string>
    <string name="report_button">Récap pour mon médecin</string>
    <string name="report_dialog_title">Récap pour mon médecin</string>
    <string name="report_period_label">Sur quelle période ?</string>
    <string name="report_period_1">1 mois</string>
    <string name="report_period_3">3 mois</string>
    <string name="report_period_6">6 mois</string>
</resources>