<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.audreyRetournayDiet.femSante.login.LoginFragment">

        <TextView
            android:id="@+id/textViewTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nothing_you_could_do"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="284dp"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:fontFamily="@font/dinpro"
            android:ems="10"
            android:hint="@string/password_demand"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login" />

        <EditText
            android:id="@+id/ChangePassword"
            android:layout_width="284dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"

            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/dinpro"
            android:hint="@string/password_demand_2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/Login"
            android:layout_width="284dp"
            android:layout_height="55dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:textColor="@color/black"
            android:hint="@string/e_mail_demand"
            android:fontFamily="@font/dinpro"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="284dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:autofillHints="name"
            android:fontFamily="@font/dinpro"
            android:textColor="@color/black"
            android:ems="10"
            android:hint="@string/neme_demand"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitleLogin" />

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dinpro"
            android:text="@string/register_pay"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Answer" />

        <Button
            android:id="@+id/buttonTestSubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dinpro"
            android:text="@string/test_period"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonConnect" />

        <Spinner
            android:id="@+id/spinnerQuestion"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/orange_app"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ChangePassword" />

        <EditText
            android:id="@+id/Answer"
            android:layout_width="284dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:hint="@string/secret_answer"
            android:fontFamily="@font/dinpro"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerQuestion" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password_help"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>