<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality_day"
        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
        android:textColor="@color/blue_app" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupQuality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:singleSelection="true"
        app:selectionRequired="true">
    </com.google.android.material.chip.ChipGroup>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:text="@string/causes_quality_day"
    android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCauses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/other_details"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAutres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quality_day_causes"
            android:gravity="top"
            android:minLines="4"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>
</androidx.core.widget.NestedScrollView>